--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/assets/styles/styles.css" />
 </head>
 <body>
     <header>
-        <img src="./assets/images/Logo Mighty ducks-01.png" width="10%" alt="Logo">
+        <img src="./assets/images/hockey 3.jpg" width="30%" alt="">
+        
         <h1>Mighty Ducks Hockey League</h1>
     </header>
-    
+    <img class="logo" src="./assets/images/Logo Mighty ducks-01.png" width="10%" alt="Logo">
     <nav>
         <a href="./index.html">Home</a> |
         <a href="./about.html">About MDHL</a> |
         <a href="#">Contact</a>
     </nav>
     <br>
-   <img src="./assets/images/hockey 3.jpg" width="30%" alt="">
-   <p>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+    <h2>Contact</h2>
+   <div class="text">
+    <p>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a></p>
    <p>We reply to your email as soon as we can.</p>
+   </div>
+   
 </body>
 </html>
