--- a/about.html
+++ b/about.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/assets/styles/styles.css" />
 </head>
 <body>
     <header>
-        <img src="./assets/images/Logo Mighty ducks-01.png" width="10%" alt="Logo">
+        <img src="./assets/images/hockey  2.jpg" width="30%" alt="">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     
@@ -18,8 +19,11 @@
         <a href="./contact.html">Contact</a>
     </nav>
     <br>
-   <img src="./assets/images/hockey  2.jpg" width="30%" alt="">
-   <ul>
+   
+   <img class="logo" src="./assets/images/Logo Mighty ducks-01.png" width="10%" alt="Logo">
+<h2>About MDHL</h2>
+   <div class="text">
+ <ul>
     <h3>Mision</h3>
         <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
             learning and playing soccer, with opportunities to learn and practice skills related to the game of
@@ -35,5 +39,7 @@
             parents and previous league members</p>
        
    </ul>
+   </div>
+  
 </body>
 </html>
