--- a/about.html
+++ b/about.html
@@ -14,8 +14,9 @@
     </header>
     
     <nav>
-        <a href="./index.html">Home</a> |
-        <a href="#">About MDHL</a> |
+        <a href="./index.html">Home</a> <br>
+        <a href="#">About MDHL</a> 
+        <br>
         <a href="./contact.html">Contact</a>
     </nav>
     <br>
