--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,10 @@
     </header>
     <img class="logo" src="./assets/images/Logo Mighty ducks-01.png" width="10%" alt="Logo">
     <nav>
-        <a href="./index.html">Home</a> |
-        <a href="./about.html">About MDHL</a> |
+        <a href="./index.html">Home</a> 
+        <br>
+        <a href="./about.html">About MDHL</a> 
+        <br>
         <a href="#">Contact</a>
     </nav>
     <br>
