--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     </header> 
     </div>
     
-    <img class="logo" src="./assets/images/Logo Mighty ducks-01.png" width="10%" alt="Logo">
+    <img class="logo" src="./assets/images/Logo Mighty ducks-01.png"  alt="Logo">
     <nav>
-        <a href="#">Home</a> |
-        <a href="./about.html">About MDHL</a> |
+        <a href="#">Home</a> 
+        <br>
+        <a href="./about.html">About MDHL</a> 
+        <br>
         <a href="./contact.html">Contact</a>
     </nav>
     <h2>Upcoming Events</h2>
