--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
     <link rel="stylesheet" href="/assets/styles/styles.css" />
 </head>
 <body>
@@ -18,13 +18,17 @@
         <a href="#">About MDHL</a> 
         <br>
         <a href="./contact.html">Contact</a>
+        <br>
+        <a href="./game_information.html">Game Information</a>
+        <br>
+        <a href="./rules_&_policies.html">Rules & Policies</a>
     </nav>
     <br>
    
    <img class="logo" src="./assets/images/Logo Mighty ducks-01.png" width="10%" alt="Logo">
-<h2>About MDHL</h2>
+<h2 class="title">About MDHL</h2>
    <div class="text">
- <ul>
+ 
     <h3>Mision</h3>
         <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
             learning and playing soccer, with opportunities to learn and practice skills related to the game of
@@ -39,7 +43,7 @@
             neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
             parents and previous league members</p>
        
-   </ul>
+
    </div>
   
 </body>
