--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
         <a href="./about.html">About MDHL</a> 
         <br>
         <a href="./contact.html">Contact</a>
+        <br>
+        <a href="./game_information.html">Game Information</a>
+        <br>
+        <a href="./rules_&_policies.html">Rules & Policies</a>
     </nav>
-    <h2>Upcoming Events</h2>
+    <h2 class="title" >Upcoming Events</h2>
    <div class="text">
     
-    <ul>
+    
         <h3>August 4</h3>
         <p>MDSL Fundraiser</p>
         <h3>August 16</h3>
         <p>Season Kick-off: Meet the Teams</p>
         <h3>September 1</h3>
         <p>First Game of the Season (Check Game Schedule for details)</p> 
-   </ul>
+
    </div>
    
 </body>
