--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="/assets/styles/styles.css" />
 </head>
 <body>
@@ -20,9 +20,13 @@
         <a href="./about.html">About MDHL</a> 
         <br>
         <a href="#">Contact</a>
+        <br>
+        <a href="./game_information.html">Game Information</a>
+        <br>
+        <a href="./rules_&_policies.html">Rules & Policies</a>
     </nav>
     <br>
-    <h2>Contact</h2>
+    <h2 class="title">Contact</h2>
    <div class="text">
     <p>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a></p>
    <p>We reply to your email as soon as we can.</p>
