--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,8 @@
         <a href="./game_information.html">Game Information</a>
         <br>
         <a href="./rules_&_policies.html">Rules & Policies</a>
+        <br>
+        <a href="./forms.html">Forms</a>
     </nav>
     <br>
     <h2 class="title">Contact</h2>
