--- a/game_information.html
+++ b/game_information.html
@@ -21,6 +21,8 @@
         <a href="#">Game Information</a>
         <br>
         <a href="./rules_&_policies.html">Rules & Policies</a>
+        <br>
+        <a href="./forms.html">Forms</a>
     </nav>
     
     <div class="info">
