--- a/about.html
+++ b/about.html
@@ -22,6 +22,8 @@
         <a href="./game_information.html">Game Information</a>
         <br>
         <a href="./rules_&_policies.html">Rules & Policies</a>
+        <br>
+        <a href="./forms.html">Forms</a>
     </nav>
     <br>
    
