--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <a href="./game_information.html">Game Information</a>
         <br>
         <a href="./rules_&_policies.html">Rules & Policies</a>
+        <br>
+        <a href="./forms.html">Forms</a>
     </nav>
     <h2 class="title" >Upcoming Events</h2>
    <div class="text">
