--- a/rules_&_policies.html
+++ b/rules_&_policies.html
@@ -21,6 +21,8 @@
         <a href="./game_information.html">Game Information</a>
         <br>
         <a href="#">Rules & Policies</a>
+        <br>
+        <a href="./forms.html">Forms</a>
     </nav>
     <div class="info">
         <h2 class="title3">RULES OF PLAY & POLICIES</h2>
