--- a/game_information.html
+++ b/game_information.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Information</title>
     <link rel="stylesheet" href="/assets/styles/styles.css" />
+    <link rel="stylesheet" href="/assets/styles/game_css.css" />
 </head>
 <body>
     <header>
+        <img src="./assets/images/hockey  2.jpg" width="30%" alt="">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
-    <nav class="nav-extra">
+
+    <nav>
         <a href="./index.html">Home</a> 
         <br>
         <a href="./about.html">About MDHL</a> 
@@ -24,23 +27,29 @@
         <br>
         <a href="./forms.html">Forms</a>
     </nav>
-    
-    <div class="info">
-        <h2 class="title3">Fall Schedule</h2>
+    <img class="logo" src="./assets/images/Logo Mighty ducks-01.png" width="10%" alt="Logo">
+    <h2 class="title">Fall Schedule</h2>
+    <div class="text">
+        
         <h3>*All games take place on Saturday.</h3>
 
         <table>
-            <tr>
+            <thead>
+                <tr>
                 <th>September</th>
                 <th>Teams</th>
                 <th>Location</th>
                 <th>Times</th>
+                <th>Maps</th>
             </tr>
+            </thead>
+            <tbody>
             <tr>
                 <td rowspan="2">9/01</td>
                 <td>U1 and U4</td>
                 <td>AJ Katsenmaier</td>
                 <td>9:30 a.m.</td>
+                <td rowspan="2"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7806441290827!2d-87.86499328454478!3d42.32587717918919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1sen!2sar!4v1676569596304!5m2!1sen!2sar" width="250" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
             </tr>
             <tr>
                 <td>U3 and U2</td>
@@ -52,6 +61,7 @@
                 <td>U5 and U6</td>
                 <td>HOward A Yeager</td>
                 <td>9:30 a.m.</td>
+                <td rowspan="2"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d182055.9191271256!2d-88.13057945263442!3d44.52285983689556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8802e2e809b380f3%3A0x6370045214dcf571!2sGreen%20Bay%2C%20WI%2C%20USA!5e0!3m2!1sen!2sar!4v1676569869760!5m2!1sen!2sar" width="250" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
             </tr>
             <tr>
                 <td>U1 and U4</td>
@@ -85,7 +95,11 @@
                 <td>U4 and U5</td>
                 <td>Greenbay</td>
                 <td>9:30 a.m.</td>
-            </tr>
+            </tr> 
+            </tbody>
+
+
+
         </table>
         <p>
             Facility Type: Outdoor
