--- a/rules_&_policies.html
+++ b/rules_&_policies.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <header>
+        <img src="./assets/images/hockey  2.jpg" width="30%" alt="">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
-    <nav class="nav-extra">
+    <nav>
         <a href="./index.html">Home</a> 
         <br>
         <a href="./about.html">About MDHL</a> 
@@ -24,8 +25,10 @@
         <br>
         <a href="./forms.html">Forms</a>
     </nav>
-    <div class="info">
-        <h2 class="title3">RULES OF PLAY & POLICIES</h2>
+    <img class="logo" src="./assets/images/Logo Mighty ducks-01.png" width="10%" alt="Logo">
+      <h2 class="title">RULES OF PLAY & POLICIES</h2>
+    <div class="text">
+      
        <p>IHF rules shall govern MDHL play except as modified herein.</p>
 
        <h3>Sportsmanship</h3>
